--- a/source/_posts/好好生活.md
+++ b/source/_posts/好好生活.md
@@ -15,27 +15,27 @@ date: 2020-10-08 00:48:22
 
 ## 0x00 
 
-其实在两个月之前，刚刚坐在这张宽大的书桌前的时候，就有考虑过要写这样一篇文章，但是一直苦苦纠结于到底要用一个什么样的标题，却无论如何都没有想到，在两个月之后的今天，最终还是回归到了这样一个俗套的名字上。
+其实在两个月之前，就有考虑过要写这样一篇文章，但一直苦苦纠结于到底要用一个什么样的标题，却无论如何都没有想到，在两个月之后的今天，最终还是回归到了这样一个俗套的名字上。
 
-不禁感到有些滑稽，又不是要卖文为生，仅仅就是写给自己的一些文字而已，何必久久纠结于一个标题，又不指望靠着一个标题吸粉。毕竟距离百万粉丝，就差了一个“百”和一个“万”字了。
+又不是要卖文为生，仅仅就是写给自己的一些文字而已，何必久久纠结于一个标题，又不指望靠着一个标题吸粉。
 
 <!-- more -->
 
 ## 0x01
 
-如果不是西西弗书店橱窗里的单向历的封面从2020悄悄变到了2021，我都不敢相信这一年真的马上就要结束了。整个世界都被疫情禁锢的一年，仔细想来，这一年也是过得有些浑浑噩噩，但的确又完成了很多曾经看似不可能完成的事情。
+若不是西西弗书店橱窗里的单向历的封面从2020悄悄变到了2021，我都不敢相信这一年真的马上就要结束了。整个世界都被疫情禁锢的一年，仔细想来，这一年也是过得有些浑浑噩噩，但的确又完成了很多曾经看似不可能完成的事情。
 
-每天都在都似乎在盼望和期待着什么，但似乎一切的期望都被掩盖在了久久不能摘下的口罩里。
+每天都在都似乎在盼望和期待着什么，但似乎一切的期望都被掩盖在久久不能摘下的口罩里了。
 
-几经摇摆中间，时间就这么悄悄的溜走了。如果一定要给这些时间加上一个描述的话，“焦虑”自然是最合适不过的一个形容词了。
+几经摇摆中间，时间就这么悄悄溜走了。如果一定要给这些时间加上一个描述的话，“焦虑”自然是最合适不过的一个形容词了。
 
-每个人都在焦虑。都在为一些很难去改变或者改变不了的事情而焦虑。
+似乎每个人都在焦虑。都在为一些很难去改变或者改变不了的事情而焦虑。
 
 
 ## 0x02
 
 
-可是不得不承认的是，从去年年末开始，很长一段时间，我都把自己的生活过得一团糟。撇开工作不谈，很长一段时间我都很害怕微信的提示音和手机的震动。但是又不得不去处理这些消息。在工作压力不小的情况下，还要独自去处理装修的事情。明明感觉到的是非常的力不从心，但是却又没有任何的办法。
+可是不得不承认的是，从去年年末开始，很长一段时间，我都把生活过得一团糟。撇开工作不谈，很长一段时间我都很害怕微信的提示音和手机的震动。但是又不得不去处理这些消息。在工作压力不小的情况下，还要独自去处理装修的事情。明明感觉到的是非常的力不从心，但是却又没有任何的办法。
 
 一旦心情变了，很多事情也都跟着发生了变化，就连每天给大橘添饭，给二猫梳毛，也突然变成了一种无形的压力。尤其当回到出租屋已经晚上快12点的时候，真的有太多的无奈。
 
@@ -69,7 +69,7 @@ date: 2020-10-08 00:48:22
 
 有时候会和身边同期入职的小伙伴们聊起这个问题，关于职业生涯。其实在这件事情上，如果能保持积极和持续学习的话，我自己还是持乐观态度的。工作两年，到底是什么样的一个概念呢？放在员工平均司龄不会超过2年的互联网公司，意味着已经超过平均线了。但是其实如果映射到传统行业来看，2年，也许职业生涯连刚刚起步都算不上。就用教育行业来说，我还依稀记得从前父亲有跟我讲过，他们那时候毕业进学校教学生，第一二年是教初一初二，但是第三年的时候不能跟着学生一起上初三，因为是新人，学校会在初二多压一年，才能让年轻老师去带毕业班，换句话说，需要整整4年时间，才算是把整个初中学段的教材摸了一遍。如果真正要成为骨干，可能还需要更多的时间去历练，或者说还需要多带几轮。
 
-可是在快节奏的互联网公司里，很多时候可能会让人有了一种错觉，误以为很多毕业10年左右可能就已经到了职业的天花板，晋升空间受限，职业生涯也就差不多要结束了。
+可是在快节奏的互联网公司里，很多时候会让人有了一种错觉，以为很多毕业10年左右可能就已经到了职业的天花板，晋升空间受限，职业生涯也就差不多要结束了。
 
 为什么我会用错觉这个词呢，其实我有问过自己，职级到头是否就是职业生涯到头了呢？职级这东西从某种程度讲，其实就是一个公司的人力资源管理的一种指标，可是它并不是我们作为一个个体职业生涯的度量衡，我们是否要摄入新的知识，是否坚持输出，这些都只与我们“个人”有关，与某一个群体赋予我们的一个标签并无关联。所以，我们为什么要为这个而纠结呢？只要坚持跟上这个高速发展的技术潮流，不要掉队，就总会有标签贴在我们身上的。
 
