update book list

--- a/source/_posts/2021/香辣鱿鱼虾干锅.md
+++ b/source/_posts/2021/香辣鱿鱼虾干锅.md
@@ -16,7 +16,7 @@ updated: 2021-09-12 20:42:32
 
 说起麻婆豆腐，2016年在北京实验室做项目的时候，因为进展不顺利，再加上一些其他的事情，很长一段时间都很不开心。12月14日，知道了我的近况，好友郭诗敏送我了一本《一人食》，书衣上的一句“一人食，一个人也要好好吃饭，一个人，也要过得精致温暖”。触动很大，于是，就从书上的第一道菜麻婆豆腐开始，开启了我认认真真用心烹饪的时光。
 
-而鱿鱼虾的干锅，则对我来说更多的是对于儿时的记忆，这道干锅便是一大家人聚餐时餐桌上的常客，两位姑父都能非常好的用自己的方式来演绎这道美食，谈笑举杯间，锅中外酥里嫩的大虾，弹牙爽口的鱿鱼，软烂入味的青笋和锅底吸满酱汁的薯条顷刻见底，只需要稍微添些早已备好的底料和一壶开水，则又成为一锅热气腾腾的火锅。牛羊肉卷，毛肚宽粉，稍微烫煮，蘸着碗中的麻酱小料，便是美味时刻的延续。宴席过半，长辈们把酒畅谈，小辈们悉数退席，围坐在书房电脑旁一起玩游戏，各自欢乐。
+而鱿鱼虾的干锅，则对我来说更多的是对儿时的记忆，这道干锅便是一大家人聚餐时餐桌上的常客，两位姑父都能非常好的用自己的方式来演绎这道美食，谈笑举杯间，锅中外酥里嫩的大虾，弹牙爽口的鱿鱼，软烂入味的青笋和锅底吸满酱汁的薯条顷刻见底，只需要稍微添些早已备好的底料和一壶开水，则又成为一锅热气腾腾的火锅。牛羊肉卷，毛肚宽粉，稍微烫煮，蘸着碗中的麻酱小料，便是美味时刻的延续。宴席过半，长辈们把酒畅谈，小辈们悉数退席，围坐在书房电脑旁一起玩游戏，各自欢乐。
 
 年岁渐长，转眼间离乡在外十载有余，每每面对这道菜，便知余光中《乡愁》中的用词浅浅、感情深深。
 
@@ -42,7 +42,7 @@ updated: 2021-09-12 20:42:32
 
 {% asset_img 2.jpeg %}
 
-薯条炸好需要一点时间，在这个空档里面我们首先要把青笋切小滚刀块，鱼豆腐对角切开。灶上的水开则丢一小勺盐打底，滴入几滴清油后下入青笋块转中火烫煮。
+薯条炸好需要一点时间，在这个空档里面我们首先要把青笋切小滚刀块，鱼豆腐对角切开。灶上的水开再丢一小勺盐打底，滴入几滴清油后下入青笋块转中火烫煮。
 
 同时可以开始处理虾，先前已经基本洗净，只需要进行开背去虾线即可。
 
