update book list

--- a/source/_posts/2021/致站台.md
+++ b/source/_posts/2021/致站台.md
@@ -52,7 +52,7 @@ updated: 2021-11-01 23:46:40
 
 从此不再惧怕漂泊，不再恐惧未知的彼岸，也许你比我更了解心的方向。
 
-熟悉的此岸，有我所挚爱的，有我所厌倦的，忍不住，以就是要奔向远方，站台，你送我去彼岸，是不是只有到了彼岸才能知晓余光中《乡愁》中的用词浅浅、感情深深？
+熟悉的此岸，有我所挚爱的，有我所厌倦的，忍不住，依旧是要奔向远方，站台，你送我去彼岸，是不是只有到了彼岸才能知晓余光中《乡愁》中的用词浅浅、感情深深？
 
 当我有足够的勇气去压抑、去消磨心底那对未知的恐惧、去面对未来时，却发现站台，你渐行渐远，早已在我的身后，成为另一个彼岸，一个再也回不去的彼岸。
 
